# lightdm-gtk-greeter

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  lightdm-gtk-greeter.doap  lightdm-gtk-greeter.pot
.github/: lpbugtracker.py
.github/workflows/: distcheck.yml  track-lp-issues.yaml
data/: Makefile.am  greeter.ui  lightdm-gtk-greeter.conf  lightdm-gtk-greeter.desktop  sample-lightdm-gtk-greeter.css
data/badges/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  ar.po  ast.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  fy.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  (+39 more)
src/: Makefile.am  greeter_menu_bar.xml  greeterbackground.c  greeterbackground.h  greeterconfiguration.c  greeterconfiguration.h  greeterdeprecated.c  greeterdeprecated.h  greetermenubar.c  greetermenubar.h  greeteruserimage.c  greeteruserimage.h  lightdm-gtk-greeter-application.css  lightdm-gtk-greeter-fallback.css  lightdm-gtk-greeter.c  lightdm-gtk-greeter.css  lightdm-gtk-greeter.glade
