#
# Copyright (C) 2010 - 2011, Robert Ancell <robert.ancell@canonical.com>
# Copyright (C) 2012 - 2013, Lionel Le Folgoc <mrpouit@ubuntu.com>
# Copyright (C) 2014, Sean Davis <smd.seandavis@gmail.com>
# Copyright (C) 2014, Simon Steinbeiß <ochosi@shimmerproject.org>
#
# This program is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version. See http://www.gnu.org/copyleft/gpl.html the full text of the
# license.
#

SUBDIRS = badges

xgreetersdir = $(datadir)/xgreeters
dist_xgreeters_DATA = lightdm-gtk-greeter.desktop

docdir = $(datadir)/doc/lightdm-gtk-greeter
dist_doc_DATA = sample-lightdm-gtk-greeter.css

configdir = $(sysconfdir)/lightdm
dist_config_DATA = lightdm-gtk-greeter.conf
